# Exploration-Algrithm

./: LICENSE  README.md
exploration/: README.md
exploration/launch/: nearest_frontier_planner.launch  single_simulated_frontier.launch
exploration/launch/includes/: move_baseSafe.launch  move_base_safe.launch  robot_launch_frontier.xml
exploration/launch/includes/rviz_config/: single_frontier.rviz
exploration/launch/includes/urdf/: kobuki.urdf.xacro  kobuki_frontier.urdf.xacro  kobuki_gazebo.urdf.xacro  kobuki_gazebo_frontier.urdf xacro  kobuki_neo_frontier.urdf.xacro  kobuki_standalone.urdf.xacro
exploration/launch/includes/worlds/: map1.world  map1with_obstacle.world  map2.world  right_map_down.world  (+1 more)
exploration/param/: azhao_costmap_common_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
exploration/src/: goal_pub.cpp  robot_navigator.cpp
explore/include/explore/: explore.h  frontier_search.h
explore/launch/: explore.launch
explore/src/: costmap_client.cpp  explore.cpp  frontier_search.cpp
trajectory/: CMakeLists.txt  package.xml
trajectory/config/: trajectory.rviz
trajectory/launch/: trajectory.launch  trajectory_test.launch
trajectory/msg/: Time_route.msg
trajectory/src/: odom_pub.cpp  route_pub.cpp  route_pub.cpp~  temp_p&b.cpp  traj_pub_test.cpp  trajectory_pub.cpp  trajectory_pub.cpp~
using_markers/: CMakeLists.txt  package.xml
using_markers/launch/: marker.launch
using_markers/src/: basic_shapes.cpp  line.cpp  points_and_lines.cpp  text.cpp
